--- a/project.properties
+++ b/project.properties
@@ -9,4 +9,5 @@
 
 # Project target.
 target=Google Inc.:Google APIs:13
-android.library.reference.1=../ActionBarSherlock/library
+android.library.reference.1=../../../san/tmp/ActionBarSherlock/library
+
