--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,6 +18,7 @@
     <uses-feature android:name="android.hardware.location.network" android:required="false"/>
     <uses-feature android:name="android.hardware.touchscreen" android:required="false"/>
     <application android:icon="@drawable/ic_launcher" android:label="@string/Juick" android:theme="@android:style/Theme.Light">
+        <provider android:name=".android.CachedImageContentProvider"  android:authorities="com.juick.android.imagecache" />
         <uses-library android:name="com.google.android.maps"/>
         <activity android:name="com.juick.android.MainActivity" android:theme="@style/Theme.Sherlock.Light" android:configChanges="keyboard|keyboardHidden|orientation">
             <intent-filter>
@@ -59,6 +60,12 @@
         <activity android:name="com.juick.android.JuickPreferencesActivity"/>
         <activity android:name="com.juick.android.EditFiltersActivity" android:label="@string/EditFilters"/>
         <activity android:name="com.juick.android.PickLocationActivity" android:label="@string/Pick_a_location" android:configChanges="keyboard|keyboardHidden|orientation"/>
+        <activity android:name="com.juick.android.XMPPIncomingMessagesActivity" android:label="@string/Incoming_Events" android:configChanges="keyboard|keyboardHidden|orientation"/>
+        <receiver android:name=".android.XMPPMessageReceiver" >
+            <intent-filter>
+                <action android:name="com.juick.android.action.ACTION_MESSAGE_RECEIVED"/>
+            </intent-filter>
+        </receiver>
         <receiver android:name="com.juick.android.OnBootReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
@@ -70,6 +77,8 @@
                 <action android:name="android.accounts.AccountAuthenticator"/>
             </intent-filter>
             <meta-data android:name="android.accounts.AccountAuthenticator" android:resource="@xml/authenticator"/>
+        </service>
+        <service android:name="com.juick.android.XMPPService" android:exported="false">
         </service>
         <service android:name="com.juick.android.ContactsSyncService" android:exported="true" android:process=":contacts">
             <intent-filter>
