--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,6 +13,8 @@
     <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS"/>
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
     <uses-permission android:name="android.permission.WRITE_CONTACTS"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <uses-feature android:name="android.hardware.location" android:required="false"/>
     <uses-feature android:name="android.hardware.location.gps" android:required="false"/>
     <uses-feature android:name="android.hardware.location.network" android:required="false"/>
@@ -60,11 +62,18 @@
         <activity android:name="com.juick.android.JuickPreferencesActivity"/>
         <activity android:name="com.juick.android.EditFiltersActivity" android:label="@string/EditFilters"/>
         <activity android:name="com.juick.android.PickLocationActivity" android:label="@string/Pick_a_location" android:configChanges="keyboard|keyboardHidden|orientation"/>
-        <activity android:name="com.juick.android.XMPPIncomingMessagesActivity" android:label="@string/Incoming_Events" android:configChanges="keyboard|keyboardHidden|orientation"/>
+        <activity android:name="com.juick.android.XMPPIncomingMessagesActivity" android:label="@string/Incoming_Events" android:launchMode="singleTop" android:noHistory="true" android:configChanges="keyboard|keyboardHidden|orientation"/>
+        <activity android:name="com.juick.android.XMPPControlActivity" android:label="@string/XMPPControl" android:configChanges="keyboard|keyboardHidden|orientation"/>
         <receiver android:name=".android.XMPPMessageReceiver" >
             <intent-filter>
                 <action android:name="com.juick.android.action.ACTION_MESSAGE_RECEIVED"/>
             </intent-filter>
+        </receiver>
+
+        <receiver android:name=".android.ConnectivityChangeReceiver">
+           <intent-filter>
+              <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+           </intent-filter>
         </receiver>
         <receiver android:name="com.juick.android.OnBootReceiver">
             <intent-filter>
