--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.juick" android:versionCode="31" android:versionName="1.72">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.juickadvanced" android:versionCode="31" android:versionName="1.72">
     <uses-sdk android:minSdkVersion="8" />
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
@@ -20,7 +20,7 @@
     <uses-feature android:name="android.hardware.location.network" android:required="false"/>
     <uses-feature android:name="android.hardware.touchscreen" android:required="false"/>
     <application android:icon="@drawable/ic_launcher" android:label="@string/Juick" android:theme="@android:style/Theme.Light">
-        <provider android:name=".android.CachedImageContentProvider"  android:authorities="com.juick.android.imagecache" />
+        <provider android:name="com.juick.android.CachedImageContentProvider"  android:authorities="com.juick.android.imagecache" />
         <uses-library android:name="com.google.android.maps"/>
         <activity android:name="com.juick.android.MainActivity" android:theme="@style/Theme.Sherlock.Light" android:configChanges="keyboard|keyboardHidden|orientation">
             <intent-filter>
@@ -64,13 +64,13 @@
         <activity android:name="com.juick.android.PickLocationActivity" android:label="@string/Pick_a_location" android:configChanges="keyboard|keyboardHidden|orientation"/>
         <activity android:name="com.juick.android.XMPPIncomingMessagesActivity" android:label="@string/Incoming_Events" android:launchMode="singleTop" android:noHistory="true" android:configChanges="keyboard|keyboardHidden|orientation"/>
         <activity android:name="com.juick.android.XMPPControlActivity" android:label="@string/XMPPControl" android:configChanges="keyboard|keyboardHidden|orientation"/>
-        <receiver android:name=".android.XMPPMessageReceiver" >
+        <receiver android:name="com.juick.android.XMPPMessageReceiver" >
             <intent-filter>
                 <action android:name="com.juick.android.action.ACTION_MESSAGE_RECEIVED"/>
             </intent-filter>
         </receiver>
 
-        <receiver android:name=".android.ConnectivityChangeReceiver">
+        <receiver android:name="com.juick.android.ConnectivityChangeReceiver">
            <intent-filter>
               <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
            </intent-filter>
@@ -96,5 +96,19 @@
             <meta-data android:name="android.content.SyncAdapter" android:resource="@xml/sync_contacts"/>
             <meta-data android:name="android.provider.CONTACTS_STRUCTURE" android:resource="@xml/contacts"/>
         </service>
+
+
+        <!-- error reporting -->
+        <service
+            android:name="de.quist.app.errorreporter.ExceptionReportService"
+            android:process=":exceptionReporter"/>
+        <meta-data
+            android:name="de.quist.app.errorreporter.targetUrl"
+            android:value="http://mw.itl.ua:8080/ajaxcall/collect" />
+        <activity
+            android:name="de.quist.app.errorreporter.ExceptionReportActivity"
+            android:process=":exceptionReporter"
+            android:theme="@android:style/Theme.NoDisplay"/>
+
     </application>
 </manifest>
