* websocket (current thread notification) is reconnecting to stay keep alive * all reported xmpp fatal exceptions fixed, same with ui exceptions. * unread messages: persist between service restart. * load progress indicator * load retry to avoid blank screen * build file for release

--- a/project.properties
+++ b/project.properties
@@ -10,4 +10,6 @@
 # Project target.
 target=Google Inc.:Google APIs:13
 android.library.reference.1=../ActionBarSherlock/library
-
+project.all.jars.path=libs/
+key.store=/home/san/.ssh/juick-advanced-key.keystore
+key.alias=juick-advanced-key
