--- a/project.properties
+++ b/project.properties
@@ -13,3 +13,4 @@ project.all.jars.path=libs/
 key.store=/home/san/.ssh/juick-advanced-key.keystore
 key.alias=juick-advanced-key
 android.library.reference.1=../ActionBarSherlock/library
+android.library.reference.2=../yuku-android-util/AmbilWarna
