+ storing messages and last read markers

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -87,6 +87,8 @@
             </intent-filter>
             <meta-data android:name="android.accounts.AccountAuthenticator" android:resource="@xml/authenticator"/>
         </service>
+        <service android:name="com.juick.android.DatabaseService" android:exported="false">
+        </service>
         <service android:name="com.juick.android.XMPPService" android:exported="false">
         </service>
         <service android:name="com.juick.android.ContactsSyncService" android:exported="true" android:process=":contacts">
