--- a/project.properties
+++ b/project.properties
@@ -9,7 +9,7 @@
 
 # Project target.
 target=Google Inc.:Google APIs:13
-project.all.jars.path=libs/
+project.all.jars.path=libs/:common.jar
 key.store=/home/san/.ssh/juick-advanced-key.keystore
 key.alias=juick-advanced-key
 android.library.reference.1=../yuku-android-util/AmbilWarna
