--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,7 +21,9 @@
     <uses-feature android:name="android.hardware.location.gps" android:required="false"/>
     <uses-feature android:name="android.hardware.location.network" android:required="false"/>
     <uses-feature android:name="android.hardware.touchscreen" android:required="false"/>
-    <application android:icon="@drawable/ic_launcher" android:label="@string/Juick"
+    <application android:icon="@drawable/ic_launcher"
+                 android:label="@string/Juick"
+                 android:name="com.juick.android.JuickAdvancedApplication"
                  android:theme="@android:style/Theme.Light">
         <provider android:name="com.juick.android.CachedImageContentProvider"
                   android:authorities="com.juick.android.imagecache"/>
@@ -29,7 +31,7 @@
         <meta-data
                 android:name="android.app.default_searchable"
                 android:value="com.juick.android.SearchActivity"/>
-        <activity android:name="com.juick.android.MainActivity" android:theme="@style/Theme.Sherlock.Light"
+        <activity android:name="com.juick.android.MainActivity" android:theme="@style/Theme.Sherlock.Light" android:launchMode="singleInstance"
                   android:configChanges="keyboard|keyboardHidden|orientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -38,7 +40,11 @@
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
                 <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
                 <data android:scheme="http" android:host="juick.com"/>
+                <data android:scheme="http" android:host="*.psto.net"/>
+                <data android:scheme="http" android:host="psto.net"/>
+                <data android:scheme="http" android:host="bnw.im"/>
             </intent-filter>
         </activity>
         <activity android:name="com.juick.android.MessagesActivity"
@@ -49,7 +55,7 @@
                 <data android:mimeType="vnd.android.cursor.item/vnd.com.juick.profile"/>
             </intent-filter>
         </activity>
-        <activity android:name="com.juick.android.NewMessageActivity" android:label="@string/Juick__New_message"
+        <activity android:name="com.juick.android.NewMessageActivity" android:label="@string/New_message"
                   android:configChanges="keyboard|keyboardHidden|orientation">
             <intent-filter>
                 <action android:name="android.intent.action.SEND"/>
