--- a/project.properties
+++ b/project.properties
@@ -12,6 +12,8 @@ target=Google Inc.:Google APIs:13
 project.all.jars.path=libs/:common.jar
 key.store=/home/san/.ssh/juick-advanced-key.keystore
 key.alias=juick-advanced-key
+#key.store=/home/san/.android/debug.keystore
+#key.alias=androiddebugkey
 android.library.reference.1=../yuku-android-util/AmbilWarna
 android.library.reference.2=../ActionBarSherlock/library
 
