--- a/project.properties
+++ b/project.properties
@@ -8,7 +8,7 @@
 # project structure.
 
 # Project target.
-target=android-13
+target=Google Inc.:Google APIs:13
 project.all.jars.path=libs/:common.jar
 key.store=/home/san/.ssh/juick-advanced-key.keystore
 key.alias=juick-advanced-key
