--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.juickadvanced"
-          android:versionCode="2012121401" android:versionName="18.17.3">
+          android:versionCode="2012121405" android:versionName="18.17.7">
     <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="15"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
@@ -33,14 +33,14 @@
     <application android:icon="@drawable/ic_launcher"
                  android:label="@string/Juick"
                  android:name="com.juick.android.JuickAdvancedApplication"
-                 android:theme="@android:style/Theme.Light">
+                 >
         <provider android:name="com.juick.android.CachedImageContentProvider"
                   android:authorities="com.juick.android.imagecache"/>
         <uses-library android:name="com.google.android.maps" android:required="false"/>
         <meta-data
                 android:name="android.app.default_searchable"
                 android:value="com.juick.android.SearchActivity"/>
-        <activity android:name="com.juick.android.MainActivity" android:theme="@style/Theme.Sherlock.Light" android:launchMode="singleInstance"
+        <activity android:name="com.juick.android.MainActivity"  android:launchMode="singleTask"
                   android:configChanges="keyboard|keyboardHidden|orientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -180,20 +180,6 @@
             <meta-data android:name="android.content.SyncAdapter" android:resource="@xml/sync_contacts"/>
             <meta-data android:name="android.provider.CONTACTS_STRUCTURE" android:resource="@xml/contacts"/>
         </service>
-
-
-        <!-- error reporting -->
-        <service
-                android:name="de.quist.app.errorreporter.ExceptionReportService"
-                android:process=":exceptionReporter"/>
-        <meta-data
-                android:name="de.quist.app.errorreporter.targetUrl"
-                android:value="http://mw.itl.ua:8080/ajaxcall/collect"/>
-        <activity
-                android:name="de.quist.app.errorreporter.ExceptionReportActivity"
-                android:process=":exceptionReporter"
-                android:configChanges="keyboard|keyboardHidden|orientation"
-                android:theme="@android:style/Theme.NoDisplay"/>
 
     </application>
 </manifest>
